--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -257,7 +257,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-
+    classpath 'com.android.tools.build:gradle:4.0.0'
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
