--- a/provider/package.json
+++ b/provider/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "mongoose": "^6.4.6",
     "nodemon": "^2.0.19"
   },
   "scripts": {
